editor-components/download/download11/download11.module.scss
@use "../../../../composer-tools//composer-base-components//base//utitilities/viewports.module.scss" as *;

@mixin card-base {
  background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
  border-radius: var(--composer-border-radius-md);
  padding: var(--composer-gap-md);
  box-shadow: var(--box-shadow-active);
}

.container {
  .max-content {
    display: flex;
    flex-direction: column;
    gap: var(--composer-gap-lg);

    .vertical-content {

      .subtitle,
      .title,
      .description {
        content: "";
      }
    }

    .cards {
      display: flex;
      gap: var(--composer-gap-md);
      min-height: 100%;
      align-items: stretch;

      .left-card {
        @include card-base;
        flex-shrink: 0;

        &.no-full {
          width: 35%;
        }

        &.full {
          width: 100%;
        }

        .left-card-vertical-content {
          align-items: flex-start;

          .left-card-subtitle,
          .left-card-title,
          .left-card-description {
            color: var(--composer-font-color-primary);
            text-align: left;
            margin-left: 0;
          }

          .left-button-wrapper {
            .left-card-button {
              .left-button-text {
                content: "";
              }
            }
          }

          .left-card-image {
            width: 100%;
            object-fit: cover;
            border-radius: var(--composer-border-radius-sm);
            margin: 0 auto;
            flex: 1;

            &.no-full {
              margin-bottom: var(--composer-gap-lg);
            }

            &.full {
              height: 100%;
            }
          }
        }
      }

      .right-cards {
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: var(--composer-gap-md);
        flex: 1;

        .upper-card {
          @include card-base;
          flex: 1;
          display: flex;
          align-items: center;
          justify-content: space-between;
          gap: var(--composer-gap-xl);

          .upper-card-vertical-content {
            flex: 1;
            min-width: 0;
            align-items: flex-start;

            .upper-card-subtitle,
            .upper-card-title,
            .upper-card-description {
              color: var(--composer-font-color-primary);
              text-align: left;
              margin-left: 0;
            }

            .upper-button-wrapper {
              .upper-card-button {
                .upper-button-text {
                  content: "";
                }
              }
            }
          }

          .upper-card-image {
            width: 40%;
            height: 100%;
            object-fit: cover;
            border-radius: var(--composer-border-radius-sm);

            &.full {
              width: 100%;
            }
          }
        }

        .button-card {
          @include card-base;
          flex: 1;
          display: flex;
          justify-content: space-between;
          align-items: center;

          .button-card-vertical-content {
            flex: 1;
            min-width: 0;
            align-items: flex-start;

            .button-card-subtitle,
            .button-card-title,
            .button-card-description {
              color: var(--composer-font-color-primary);
              text-align: left;
              margin-left: 0;
            }

            .bottom-button-wrapper {
              .bottom-card-button {
                .bottom-button-text {
                  content: "";
                }
              }
            }
          }

          .button-card-image {
            width: 40%;
            min-width: 200px;
            height: 100%;
            object-fit: cover;
            border-radius: var(--composer-border-radius-sm);
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .cards {
        flex-direction: column;

        .left-card {
          &.no-full {
            width: 100%;
          }

          .left-card-vertical-content {
            height: auto;

            .left-card-image {
              flex: none;
              width: 100%;
              height: 300px;
              margin-bottom: var(--composer-gap-md) !important;

              &.full {
                height: 250px;
              }
            }
          }
        }

        .right-cards {
          flex: none;

          .upper-card {
            .upper-card-vertical-content {
              flex-direction: column;
              gap: var(--composer-gap-md);
              height: auto;

              .upper-card-image {
                width: 100%;
                height: 250px;
                order: -1;
              }
            }
          }

          .button-card {
            flex: none;

            .button-card-vertical-content {
              flex-direction: column;
              gap: var(--composer-gap-md);
              height: auto;

              .button-card-image {
                width: 100%;
                height: 250px;
                object-fit: cover;
                order: -1;
              }
            }
          }
        }
      }
    }
  }
}

