fix: In Download 11, the tablet and mobile views should be checked. The text inside the card should have no extra space beyond the vertical content, and in the mobile view, the image should be positioned above the text

--- a/editor-components/download/download11/download11.module.scss
+++ b/editor-components/download/download11/download11.module.scss
@@ -196,30 +196,21 @@
         }
 
         .right-cards {
-          flex: none;
-
           .upper-card {
-            .upper-card-vertical-content {
-              flex-direction: column;
-              gap: var(--composer-gap-md);
-              height: auto;
+            flex-direction: column-reverse;
+            gap: var(--composer-gap-md) !important;
 
-              .upper-card-image {
-                width: 100%;
-                height: 250px;
-                order: -1;
-              }
+            .upper-card-image {
+              width: 100% !important;
+              height: 300px;
+              object-fit: cover;
+              border-radius: var(--composer-border-radius-sm);
+              flex: none;
             }
           }
 
           .button-card {
-            flex: none;
-
             .button-card-vertical-content {
-              flex-direction: column;
-              gap: var(--composer-gap-md);
-              height: auto;
-
               .button-card-image {
                 width: 100%;
                 height: 250px;
